# Datagentra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  setup.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: agent.py  conversations.py  data_loader.py  database.py  llm_provider.py  logger.py  main.py
backend/tests/: conftest.py  test_agent.py  test_conversations.py  test_data_loader.py  test_database.py  test_endpoints.py  test_llm_provider.py
db/: conversations.db  conversations.db-shm  conversations.db-wal  datagentra.db  init.sql  seed_sqlite.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddDataSourceModal.tsx  ChatInterface.tsx  DataSourcePanel.tsx  DatabaseConnectModal.tsx  SchemaExplorer.tsx  SettingsModal.tsx  SetupWizard.tsx  SyntaxHighlighter.tsx
frontend/src/components/charts/: BarChartComponent.tsx  DynamicChart.tsx  KPICard.tsx  LineChartComponent.tsx  PieChartComponent.tsx  ScatterChartComponent.tsx  TableComponent.tsx  useChartTheme.ts
frontend/src/hooks/: useDatagentra.ts
frontend/src/lib/: logger.ts  utils.ts
